fixing issue where gauge spills out on mobile view

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -24,3 +24,7 @@ ion-title img {
   display: flex;
   justify-content: center;
 }
+
+#canvas {
+  max-width: 100%;
+}
